--- a/index.html
+++ b/index.html
@@ -84,5 +84,29 @@
       };
       document.body.appendChild(script);
     </script>
+
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.4.1/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.4.1/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+    
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyCHWFGxP8kGLOc6kds9Go-0mpe8wWEb-Vk",
+        authDomain: "csc495-firebasedemo.firebaseapp.com",
+        projectId: "csc495-firebasedemo",
+        storageBucket: "csc495-firebasedemo.appspot.com",
+        messagingSenderId: "986450081898",
+        appId: "1:986450081898:web:aab258c6df2aafe736f213",
+        measurementId: "G-EHFLKQBEGZ"
+      };
+    
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
   </body>
 </html>
