--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
       import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.4.1/firebase-analytics.js";
       // TODO: Add SDKs for Firebase products that you want to use
       // https://firebase.google.com/docs/web/setup#available-libraries
+      <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-database.js"></script>
     
       // Your web app's Firebase configuration
       // For Firebase JS SDK v7.20.0 and later, measurementId is optional
