Index.html changes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       };
     
       // Initialize Firebase
-      const app = initializeApp(firebaseConfig);
+      firebase.initializeApp(firebaseConfig);
     </script>
 
     <script>
