--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     projectId: "csc495-firebasedemo",
     storageBucket: "csc495-firebasedemo.appspot.com",
     messagingSenderId: "986450081898",
-    appId: "1:986450081898:web:aab258c6df2aafe736f213"
-
+    appId: "1:986450081898:web:aab258c6df2aafe736f213",
+    measurementId: "G-EHFLKQBEGZ"
   };
   // Initialize Firebase
   const app = initializeApp(firebaseConfig);
